convert/objects/sf_devops__Hidden_Remote_Change__c.object
<CustomObject>
    <description>A join object between RemoteChange and WorkItem to track the items that are hidden in a work item.</description>
    <label>Hidden Remote Change</label>
    <nameField>
        <displayFormat>HRC-{00000}</displayFormat>
        <label>Hidden Remote Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hidden Remote Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>sf_devops__Hidden_by_Force_Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this Hidden Remote Change been hidden by force ignore?</description>
        <label>Hidden by Force Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Change__c</fullName>
        <description>the remote change in this join</description>
        <label>Remote Change</label>
        <referenceTo>sf_devops__Remote_Change__c</referenceTo>
        <relationshipName>HiddenRemoteChanges</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Work_Item__c</fullName>
        <description>The work item in this join.</description>
        <label>Work Item</label>
        <referenceTo>sf_devops__Work_Item__c</referenceTo>
        <relationshipName>HiddenRemoteChanges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>